correctly link bootstrap and add additional spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@ body {
 h1 {
     text-decoration: underline;
     color: rgb(145, 53, 199);
+    margin: 50px;
 }
 
 img {
